Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-25588

Crash when quickly switching sessions after reloading changed files

XMLWordPrintable

    • fbeaa774b5528764669f8cf2068b65149fc4adcd (qt-creator/qt-creator/4.15)

      Steps to reproduce:

      1. Make some changes to e.g. CMakeLists.txt of qtquickcontrols2
      2. git reset --hard origin/dev
      3. Click Yes when Creator asks if it should reload the files that changed
      4. Quickly switch to the default session

      Output when run via gdb on the command line:

      [Thread 0x7fff9a7fc700 (LWP 39332) exited]
      [New Thread 0x7fff9a7fc700 (LWP 39335)]
      SOFT ASSERT: "m_treeScanner.isFinished() && !m_reader.isParsing()" in file ../../../../qt-creator/src/plugins/cmakeprojectmanager/cmakebuildsystem.cpp, line 718
      corrupted double-linked list
      --Type <RET> for more, q to quit, c to continue without paging--
      
      Thread 1 "qtcreator" received signal SIGABRT, Aborted.
      __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      50	../sysdeps/unix/sysv/linux/raise.c: No such file or directory.
      (gdb) bt
      #0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #1  0x00007ffff5b17859 in __GI_abort () at abort.c:79
      #2  0x00007ffff5b823ee in __libc_message (action=action@entry=do_abort, fmt=fmt@entry=0x7ffff5cac285 "%s\n") at ../sysdeps/posix/libc_fatal.c:155
      #3  0x00007ffff5b8a47c in malloc_printerr (str=str@entry=0x7ffff5caa457 "corrupted double-linked list") at malloc.c:5347
      #4  0x00007ffff5b8aacc in unlink_chunk (p=p@entry=0x55555998ac20, av=0x7ffff5cddb80 <main_arena>) at malloc.c:1460
      #5  0x00007ffff5b8abfc in malloc_consolidate (av=av@entry=0x7ffff5cddb80 <main_arena>) at malloc.c:4494
      #6  0x00007ffff5b8ce03 in _int_malloc (av=av@entry=0x7ffff5cddb80 <main_arena>, bytes=bytes@entry=4121) at malloc.c:3699
      #7  0x00007ffff5b8f419 in __GI___libc_malloc (bytes=4121) at malloc.c:3066
      #8  0x00007ffff5fde82d in QArrayData::allocate(unsigned long, unsigned long, unsigned long, QFlags<QArrayData::AllocationOption>) () at /home/mitch/dev/qt-unified/5.15.2/gcc_64/lib/libQt5Core.so.5
      #9  0x00007ffff603ad3d in QByteArray::resize(int) () at /home/mitch/dev/qt-unified/5.15.2/gcc_64/lib/libQt5Core.so.5
      #10 0x00007ffff60edd13 in QIODevice::readAll() () at /home/mitch/dev/qt-unified/5.15.2/gcc_64/lib/libQt5Core.so.5
      #11 0x00007ffff612f48a in QProcess::readAllStandardOutput() () at /home/mitch/dev/qt-unified/5.15.2/gcc_64/lib/libQt5Core.so.5
      #12 0x00007fffd72834e0 in CMakeProjectManager::Internal::CMakeProcess::processStandardOutput() ()
          at /home/mitch/dev/qtcreator-Desktop_Qt_5_15_2_GCC_64bit-Release/lib/qtcreator/plugins/libCMakeProjectManager.so
      #13 0x00007fffd7286648 in CMakeProjectManager::Internal::CMakeProcess::~CMakeProcess() () at /home/mitch/dev/qtcreator-Desktop_Qt_5_15_2_GCC_64bit-Release/lib/qtcreator/plugins/libCMakeProjectManager.so
      #14 0x00007fffd72866ed in CMakeProjectManager::Internal::CMakeProcess::~CMakeProcess() () at /home/mitch/dev/qtcreator-Desktop_Qt_5_15_2_GCC_64bit-Release/lib/qtcreator/plugins/libCMakeProjectManager.so
      #15 0x00007fffd731592e in CMakeProjectManager::Internal::FileApiReader::~FileApiReader() ()
          at /home/mitch/dev/qtcreator-Desktop_Qt_5_15_2_GCC_64bit-Release/lib/qtcreator/plugins/libCMakeProjectManager.so
      #16 0x00007fffd726911a in CMakeProjectManager::Internal::CMakeBuildSystem::~CMakeBuildSystem() ()
          at /home/mitch/dev/qtcreator-Desktop_Qt_5_15_2_GCC_64bit-Release/lib/qtcreator/plugins/libCMakeProjectManager.so
      #17 0x00007fffd72691fd in CMakeProjectManager::Internal::CMakeBuildSystem::~CMakeBuildSystem() ()
          at /home/mitch/dev/qtcreator-Desktop_Qt_5_15_2_GCC_64bit-Release/lib/qtcreator/plugins/libCMakeProjectManager.so
      #18 0x00007fffd72a5917 in CMakeProjectManager::CMakeBuildConfiguration::~CMakeBuildConfiguration() ()
          at /home/mitch/dev/qtcreator-Desktop_Qt_5_15_2_GCC_64bit-Release/lib/qtcreator/plugins/libCMakeProjectManager.so
      #19 0x00007fffd72a59cd in CMakeProjectManager::CMakeBuildConfiguration::~CMakeBuildConfiguration() ()
          at /home/mitch/dev/qtcreator-Desktop_Qt_5_15_2_GCC_64bit-Release/lib/qtcreator/plugins/libCMakeProjectManager.so
      --Type <RET> for more, q to quit, c to continue without paging--
      #20 0x00007fffd99b63fe in ProjectExplorer::Target::~Target() () at /home/mitch/dev/qtcreator-Desktop_Qt_5_15_2_GCC_64bit-Release/lib/qtcreator/plugins/libProjectExplorer.so
      #21 0x00007fffd99b665d in ProjectExplorer::Target::~Target() () at /home/mitch/dev/qtcreator-Desktop_Qt_5_15_2_GCC_64bit-Release/lib/qtcreator/plugins/libProjectExplorer.so
      #22 0x00007fffd99f668f in ProjectExplorer::ProjectPrivate::~ProjectPrivate() () at /home/mitch/dev/qtcreator-Desktop_Qt_5_15_2_GCC_64bit-Release/lib/qtcreator/plugins/libProjectExplorer.so
      #23 0x00007fffd99f677d in ProjectExplorer::Project::~Project() () at /home/mitch/dev/qtcreator-Desktop_Qt_5_15_2_GCC_64bit-Release/lib/qtcreator/plugins/libProjectExplorer.so
      #24 0x00007fffd7286dbd in CMakeProjectManager::CMakeProject::~CMakeProject() () at /home/mitch/dev/qtcreator-Desktop_Qt_5_15_2_GCC_64bit-Release/lib/qtcreator/plugins/libCMakeProjectManager.so
      #25 0x00007fffd99e24de in ProjectExplorer::SessionManager::removeProjects(QList<ProjectExplorer::Project*> const&) ()
          at /home/mitch/dev/qtcreator-Desktop_Qt_5_15_2_GCC_64bit-Release/lib/qtcreator/plugins/libProjectExplorer.so
      #26 0x00007fffd99e37ed in ProjectExplorer::SessionManager::loadSession(QString const&, bool) ()
          at /home/mitch/dev/qtcreator-Desktop_Qt_5_15_2_GCC_64bit-Release/lib/qtcreator/plugins/libProjectExplorer.so
      #27 0x00007fffd98d9d9f in ProjectExplorer::ProjectExplorerPluginPrivate::setSession(QAction*) ()
          at /home/mitch/dev/qtcreator-Desktop_Qt_5_15_2_GCC_64bit-Release/lib/qtcreator/plugins/libProjectExplorer.so
      #28 0x00007ffff61f3f30 in void doActivate<false>(QObject*, int, void**) () at /home/mitch/dev/qt-unified/5.15.2/gcc_64/lib/libQt5Core.so.5
      #29 0x00007ffff7555aaf in QActionGroup::triggered(QAction*) () at /home/mitch/dev/qt-unified/5.15.2/gcc_64/lib/libQt5Widgets.so.5
      #30 0x00007ffff7556149 in QActionGroup::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) () at /home/mitch/dev/qt-unified/5.15.2/gcc_64/lib/libQt5Widgets.so.5
      #31 0x00007ffff61f3ddf in void doActivate<false>(QObject*, int, void**) () at /home/mitch/dev/qt-unified/5.15.2/gcc_64/lib/libQt5Core.so.5
      #32 0x00007ffff7552672 in QAction::triggered(bool) () at /home/mitch/dev/qt-unified/5.15.2/gcc_64/lib/libQt5Widgets.so.5
      #33 0x00007ffff7554a9e in QAction::activate(QAction::ActionEvent) () at /home/mitch/dev/qt-unified/5.15.2/gcc_64/lib/libQt5Widgets.so.5
      #34 0x00007ffff76c453a in QMenuPrivate::activateCausedStack(QVector<QPointer<QWidget> > const&, QAction*, QAction::ActionEvent, bool) ()
          at /home/mitch/dev/qt-unified/5.15.2/gcc_64/lib/libQt5Widgets.so.5
      #35 0x00007ffff76cb666 in QMenuPrivate::activateAction(QAction*, QAction::ActionEvent, bool) () at /home/mitch/dev/qt-unified/5.15.2/gcc_64/lib/libQt5Widgets.so.5
      #36 0x00007ffff76ce40c in QMenu::keyPressEvent(QKeyEvent*) () at /home/mitch/dev/qt-unified/5.15.2/gcc_64/lib/libQt5Widgets.so.5
      #37 0x00007ffff75970a7 in QWidget::event(QEvent*) () at /home/mitch/dev/qt-unified/5.15.2/gcc_64/lib/libQt5Widgets.so.5
      #38 0x00007ffff76cecdb in QMenu::event(QEvent*) () at /home/mitch/dev/qt-unified/5.15.2/gcc_64/lib/libQt5Widgets.so.5
      #39 0x00007ffff755843c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /home/mitch/dev/qt-unified/5.15.2/gcc_64/lib/libQt5Widgets.so.5
      #40 0x00007ffff755fb55 in QApplication::notify(QObject*, QEvent*) () at /home/mitch/dev/qt-unified/5.15.2/gcc_64/lib/libQt5Widgets.so.5
      #41 0x00007ffff61bb808 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /home/mitch/dev/qt-unified/5.15.2/gcc_64/lib/libQt5Core.so.5
      --Type <RET> for more, q to quit, c to continue without paging--
      #42 0x00007ffff75b2d0b in QWidgetWindow::event(QEvent*) () at /home/mitch/dev/qt-unified/5.15.2/gcc_64/lib/libQt5Widgets.so.5
      #43 0x00007ffff755843c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /home/mitch/dev/qt-unified/5.15.2/gcc_64/lib/libQt5Widgets.so.5
      #44 0x00007ffff755ef20 in QApplication::notify(QObject*, QEvent*) () at /home/mitch/dev/qt-unified/5.15.2/gcc_64/lib/libQt5Widgets.so.5
      #45 0x00007ffff61bb808 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /home/mitch/dev/qt-unified/5.15.2/gcc_64/lib/libQt5Core.so.5
      #46 0x00007ffff6c2fe1b in QGuiApplicationPrivate::processKeyEvent(QWindowSystemInterfacePrivate::KeyEvent*) () at /home/mitch/dev/qt-unified/5.15.2/gcc_64/lib/libQt5Gui.so.5
      #47 0x00007ffff6c34935 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () at /home/mitch/dev/qt-unified/5.15.2/gcc_64/lib/libQt5Gui.so.5
      #48 0x00007ffff6c108ab in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /home/mitch/dev/qt-unified/5.15.2/gcc_64/lib/libQt5Gui.so.5
      #49 0x00007ffff1b0669a in xcbSourceDispatch(_GSource*, int (*)(void*), void*) () at /home/mitch/dev/qt-unified/5.15.2/gcc_64/plugins/platforms/../../lib/libQt5XcbQpa.so.5
      #50 0x00007ffff2cdc17d in g_main_context_dispatch () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
      #51 0x00007ffff2cdc400 in  () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
      #52 0x00007ffff2cdc4a3 in g_main_context_iteration () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
      #53 0x00007ffff62171cc in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /home/mitch/dev/qt-unified/5.15.2/gcc_64/lib/libQt5Core.so.5
      #54 0x00007ffff61ba21a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /home/mitch/dev/qt-unified/5.15.2/gcc_64/lib/libQt5Core.so.5
      #55 0x00007ffff61c31d3 in QCoreApplication::exec() () at /home/mitch/dev/qt-unified/5.15.2/gcc_64/lib/libQt5Core.so.5
      #56 0x0000555555561a62 in main ()
      (gdb) 
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            cadam Cristian Adam
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes